# freeze-index

./: .gitignore  README.md  daphnet_evaluation.py  pyproject.toml  requirements.txt  run_multitaper_sweep.py  run_proxy_sweep.py  run_variants_comparison.py  simulation.py  visualize_param_sweep_fi_std.py  visualize_variants_comparison_results.py
aux/: cfg.py  compare.py  dataio.py
aux/test/: testCompare.py  testDataio.py
data/: source.md
freezing/: freezeindex.py
freezing/test/: testFreezeindex.py
xcomparisons/: run_multitaper_sweep.py  run_proxy_sweep.py  run_variants_comparison.py
xcomparisons/aux/: cfg.py  compare.py  dataio.py
xcomparisons/aux/test/: testCompare.py  testDataio.py
xcomparisons/aux/test/data/: nodata.test
