[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "freeze-index"
dynamic = ["version"]
description = "Unified freezing of gait index computation"
readme = "README.md"
requires-python = ">=3.9"
license = "BSD-3-Clause"
keywords = [
  "freezing of gait",
  "freeze index",
  "Parkinson's disease",
  "gait analysis",
]
authors = [
  { name = "Alessandro Schaer", email = "aschaer@magnes.ch" },
  { name = "Henrik Maurenbrecher" },
  { name = "Carlo Mangiante" },
  { name = "Roman Sobkuliak" },
]
classifiers = [
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "matplotlib>=3.10.3",
  "numpy>=2.2.5",
  "scikit_learn>=1.6.1",
  "scipy>=1.15.3",
]

[project.urls]
Documentation = "https://github.com/magnesag/freeze-index"
Issues = "https://github.com/magnesag/freeze-index/issues"
Source = "https://github.com/magnesag/freeze-index"

[tool.hatch.version]
path = "freezing/__version__.py"

[tool.hatch.envs.hatch-test]
default-args = ["."]
extra-args = ["-vv"]

[[tool.hatch.envs.hatch-test.matrix]]
python = ["3.9", "3.10"]
version = ["42", "3.14", "9000"]

[tool.pytest.ini_options]
norecursedirs = ".git venv doc data res"
python_files = "test*.py"
python_classes = "Test*"
python_functions = "test*"

[tool.coverage.run]
source_pkgs = ["freezing"]
branch = true
parallel = true
omit = ["freezing/__about__.py"]

[tool.coverage.paths]
freeze_index = ["freezing", "*/freezing"]
tests = ["**/test"]

[tool.coverage.report]
exclude_lines = ["no cov", "if __name__ == .__main__.:", "if TYPE_CHECKING:"]

